--- a/styles/header.css
+++ b/styles/header.css
@@ -1,59 +1,111 @@
 .cabeçalho__menu-hamburguer {
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    background-image: url("../img/Menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  background-image: url("../img/Menu.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .cabeçalho {
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+  background-color: var(--branco);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .container__imagem {
-    padding: 1em;
+  padding: 1em;
 }
 
 .lista-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    width: 60vw;
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 60vw;
 }
 
-.container__botao:checked ~ .lista-menu {
-    display: block;
+.container__botao:checked~.lista-menu {
+  display: block;
 }
 
 .lista-menu__titulo,
 .lista-menu__item {
-    padding: 1em;
-    background-color: var(--branco);
+  padding: 1em;
+  background-color: var(--branco);
 }
 
 .lista-menu__titulo {
-    color: var(--laranja);
-    font-weight: 700;
+  color: var(--laranja);
+  font-weight: 700;
 }
 
 .lista-menu__link {
-    background: var(--azul-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-transform: uppercase;
+  background: var(--azul-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-transform: uppercase;
 }
 
 .container__botao {
-    display: none;
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+  .container_titulo,
+  .container_titulo--negrito {
+    font-family: var(--fonte-secundario);
+    font-size: 30px;
+  }
+
+  .container_titulo {
+    font-weight: 400;
+    display: block;
+  }
+
+  .container_titulo--negrito {
+    font-weight: 700;
+  }
+
+  .opções {
+    display: flex;
+  }
+
+  .opções__link {
+    padding: 0 1em;
+    text-transform: uppercase;
+  }
+
+  .opções__link {
+    text-decoration: none;
+    color: var(--preto);
+  }
+
+  .container__imagem-transparente {
+    display: block;
+  }
+}
+
+.container __titulo {
+  display: none;
+}
+
+.opções {
+  display: none;
+}
+
+.container__imagem-transparente {
+  display: none;
+}
+
+.cabeçalho__menu-hamburguer {
+  display: none;
 }
